<resources>
    <string name="app_name">Trainex</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="rutinas">Rutinas</string>
    <string name="nueva_rutina">Nueva Rutina</string>
    <string name="mis_rutinas">Mis rutinas</string>
    <string name="ejercicios">ejercicios</string>
    <string name="agregar_ejercicio">Agregar Ejercicio</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="crear_rutina">Crear Rutina</string>
    <string name="titulo_de_la_rutina">Titulo de la rutina</string>
    <string name="generacion_rutina">Generacion Rutina</string>
    <string name="introduzca_su_edad">Introduzca su edad</string>
    <string name="d_as_de_entrenamiento">Días de Entrenamiento</string>
    <string name="objetivo_principal">Objetivo Principal</string>
    <string name="experiencia">Experiencia</string>
    <string name="generar_rutina">Generar rutina</string>
    <string name="edad">Edad</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="no_tienes_cuenta_registrate">¿No tienes cuenta? Regístrate</string>
    <string name="has_olvidado_tu_contrasena">¿Has olvidado tu contraseña?</string>
    <string name="ejercicio">Ejercicio</string>
    <string name="titulo_del_ejercicio">Título del Ejercicio</string>
    <string name="grupo_muscular">Grupo muscular</string>
    <string name="menu">Menú</string>
    <string name="recuperar_contrasena">Recuperar Contraseña</string>
    <string name="recuerdas_la_contrasena_inicia_sesion">¿Recuerdas la contraseña? Inicia Sesion</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta? Inicia Sesion</string>
    <string name="atras">Atrás</string>
    <string name="iniciar_rutina">Iniciar rutina</string>
    <string name="ejercicios_de_rutina">Ejercicios de Rutina</string>
    <string name="create_routine_title">Crear Rutina</string>
    <string name="edit_routine_title">Editar Rutina</string>
    <string name="save_button">Guardar</string>
    <string name="update_button">Actualizar</string>
    <string name="validation_title_error">Debes ingresar un título</string>
    <string name="validation_exercise_error">Debes agregar al menos un ejercicio</string>
    <string name="toast_update_success">Rutina actualizada exitosamente</string>
    <string name="toast_save_success">Rutina guardada exitosamente</string>
    <string name="busca_un_ejercicio">Busca un ejercicio</string>
    <string name="add_exercise_singular">Añadir 1 ejercicio</string>
    <string name="add_exercises_plural">Añadir %d ejercicios</string>
    <string name="validation_age_error">Introduce tu edad</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="entrenamiento_activity">Entrenamiento</string>
    <string name="series">Series</string>
    <string name="anadir_serie">Añadir Serie</string>
    <string name="eliminar_serie">Eliminar Serie</string>
    <string name="kg">KG</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="iniciar_entrenamiento">Iniciar Entrenamiento</string>
    <string name="finalizar_entrenamiento">Finalizar Entrenamiento</string>
    <string name="introduzca_su_nombre_de_usuario">Introduzca su nombre de Usuario</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="objetivo">Objetivo</string>
    <string name="estilo_de_vida">Estilo de vida</string>
    <string name="error_username_empty">El nombre de usuario es obligatorio</string>
    <string name="error_username_taken">Este nombre de usuario ya está en uso. Elige otro.</string>
    <string name="status_checking">Comprobando...</string>
    <string name="ejercicios_realizados">Ejercicios Realizados</string>
    <string name="a_n_no_has_realizado_ejercicios">Aún no has realizado ejercicios</string>
    <string name="historial_ltimo_a_o">Historial: Último Año</string>
    <string name="mes_a_o">Mes Año</string>
    <string name="cerrar">Cerrar</string>
    <string name="no_hay_entrenamientos_registrados_este_d_a">No hay entrenamientos registrados este día.</string>
    <string name="mayor_peso">Mayor Peso</string>
    <string name="records_personales">Records Personales</string>
    <string name="mejor_volumen_serie">Mejor Volumen (Serie)</string>
    <string name="mejor_volumen_total">Mejor Volumen Total</string>
    <string name="mayor_distancia">Mayor Distancia</string>
    <string name="distancia_total">Distancia Total</string>
    <string name="tiempo_total">Tiempo Total</string>
    <string name="medida_peso_corporal">Peso corporal</string>
    <string name="medida_grasa_corporal">Grasa Corporal</string>
    <string name="medida_cuello">Cuello</string>
    <string name="medida_hombros">Hombros</string>
    <string name="medida_pecho">Pecho</string>
    <string name="medida_cintura">Cintura</string>
    <string name="medida_caderas">Caderas</string>
    <string name="medida_biceps_izq">Bíceps Izquierdo</string>
    <string name="medida_biceps_der">Bíceps Derecho</string>
    <string name="medida_antebrazo_izq">Antebrazo Izquierdo</string>
    <string name="medida_antebrazo_der">Antebrazo Derecho</string>
    <string name="medida_muslo_izq">Muslo Izquierdo</string>
    <string name="medida_muslo_der">Muslo Derecho</string>
    <string name="medida_pantorrilla_izq">Pantorrilla Izquierda</string>
    <string name="medida_pantorrilla_der">Pantorrilla Derecha</string>
    <string name="titulo_medida_default">Medida</string>
    <string name="hint_valor_unidad">Valor en %1$s</string>
    <string name="error_fecha_futura">La fecha no puede ser futura</string>
    <string name="error_limite_superado">El máximo para %1$s es %2$s %3$s</string>
    <string name="error_valor_positivo">El valor debe ser positivo</string>
    <string name="error_numero_invalido">Número inválido</string>
    <string name="error_campo_vacio">Introduce un valor</string>
    <string name="mensaje_guardado_ok">Guardado correctamente</string>
    <string name="error_guardar_formato">Error al guardar: %s</string>
    <string name="grafico_progreso_label">Progreso</string>
    <string name="mensaje_datos_vacio">No hay datos disponibles</string>
    <string name="error_cargar_datos">Error al cargar datos</string>
    <string name="dialogo_eliminar_medida_titulo">Eliminar medida</string>
    <string name="dialogo_eliminar_medida_mensaje">¿Estás seguro de que deseas eliminar este registro?</string>
    <string name="toast_eliminado">Eliminado</string>
    <string name="error_eliminar">Error al eliminar</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="cambiar_foto_perfil">Cambiar foto de perfil</string>
    <string name="datos_perfil">Datos de perfil</string>
    <string name="datos_personales">Datos personales</string>
    <string name="datos_privados">Datos privados</string>
    <string name="sexo">Sexo</string>
    <string name="cumpleanos">Cumpleaños</string>
    <string name="titulo_ajustes_datos_personales">Datos personales</string>
    <string name="hint_nombre_ajustes_datos_personales">Nombre</string>
    <string name="hint_apellidos_ajustes_datos_personales">Apellidos</string>
    <string name="hint_genero_ajustes_datos_personales">Género</string>
    <string name="hint_edad_ajustes_datos_personales">Edad</string>
    <string name="hint_peso_ajustes_datos_personales">Peso</string>
    <string name="hint_altura_ajustes_datos_personales">Altura</string>
    <string name="hint_estilo_vida_ajustes_datos_personales">Estilo de vida</string>
    <string name="hint_objetivo_ajustes_datos_personales">Objetivo</string>
    <string name="boton_guardar_ajustes_datos_personales">Guardar</string>
    <string name="error_nombre_obligatorio_ajustes">El nombre es obligatorio</string>
    <string name="error_apellidos_obligatorio_ajustes">Los apellidos son obligatorios</string>
    <string name="error_edad_invalida_ajustes">Edad inválida</string>
    <string name="error_peso_invalido_ajustes">Peso inválido</string>
    <string name="error_altura_invalida_ajustes">Altura inválida</string>
    <string name="error_seleccione_genero_ajustes">Seleccione un género</string>
    <string name="error_seleccione_estilo_vida_ajustes">Seleccione un estilo de vida</string>
    <string name="error_seleccione_objetivo_ajustes">Seleccione un objetivo</string>
    <string name="mensaje_datos_actualizados_ajustes">Datos actualizados correctamente</string>
    <string name="mensaje_error_guardar_ajustes">Error al guardar: %s</string>
    <string name="user_name_default">Alberto87</string>
    <string name="content_description_settings">Ajustes de perfil</string>
    <string name="weight_format">Peso: %1$.1f Kg</string>
    <string name="height_format">Altura: %1$.2f m</string>
    <string name="age_format">Edad: %1$d años</string>
    <string name="bmi_format">IMC: %1$.2f</string>
    <string name="button_calendar">Calendario</string>
    <string name="button_measures">Medidas</string>
    <string name="button_exercises">Ejercicios</string>
    <string name="section_weekly_photos">Fotos Semanales</string>
    <string name="content_description_weekly_photos">Carrusel de fotos de evolución semanal</string>
    <string name="content_description_photo_week">Foto de evolución de una semana</string>
    <string name="section_evolution_2025">Evolución 2025</string>
    <string name="content_description_weight_chart">Gráfico de la evolución del peso</string>
    <string name="content_description_weight_icon">Icono de peso</string>
    <string name="content_description_training_icon">Icono de entrenamiento</string>
    <string name="content_description_calories_icon">Icono de calorías</string>
    <string name="grafico_etiqueta_peso">Peso</string>
    <string name="grafico_etiqueta_volumen">Volumen</string>
    <string name="grafico_titulo_volumen_carga">Volumen de Carga (Kg)</string>
    <string name="grafico_titulo_peso_corporal">Peso Corporal (Kg)</string>
    <string name="formato_imc">IMC: %.2f</string>
    <string name="etiqueta_semana">Sem %d</string>
    <string name="dialogo_titulo_foto">Añadir foto de progreso</string>
    <string name="opcion_hacer_foto">Hacer foto</string>
    <string name="opcion_galeria">Elegir de galería</string>
    <string name="dialogo_titulo_eliminar">Eliminar foto</string>
    <string name="accion_cancelar">Cancelar</string>
    <string name="titulo_cambiar_email">Cambiar correo electrónico</string>
    <string name="label_email_actual">Correo actual</string>
    <string name="label_nuevo_email">Nuevo correo</string>
    <string name="hint_nuevo_email">nuevo@ejemplo.com</string>
    <string name="label_contrasena_actual_email">Contraseña actual</string>
    <string name="boton_guardar_email">Guardar correo</string>
    <string name="hint_contrasena_placeholder">********</string>
    <string name="titulo_unidades_unidades">Unidades</string>
    <string name="peso_unidades">Peso</string>
    <string name="distancia_unidades">Distancia</string>
    <string name="medidas_corporales_unidades">Medidas corporales</string>
    <string name="kg_unidades">Kg</string>
    <string name="lbs_unidades">Lbs</string>
    <string name="km_unidades">Km</string>
    <string name="millas_unidades">Millas</string>
    <string name="cm_unidades">Cm</string>
    <string name="in_unidades">In</string>
    <string name="titulo_nueva_medida">Nueva Medida</string>
    <string name="hint_fecha">Fecha</string>
    <string name="hint_valor_ejemplo">Valor (ej: 75.5)</string>
    <string name="accion_guardar">Guardar</string>
</resources>