<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="12dp"
    android:layout_marginHorizontal="8dp"
    android:elevation="6dp"
    app:cardBackgroundColor="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgEjercicio"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/ejercicio"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/ShapeableImageView_Radius" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_del_ejercicio"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSubtitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grupo_muscular"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
